# ato-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MAINTENANCE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: .proofd-manifest.json  src-ato-mcp-cli-py-1412dcd0.md  src-ato-mcp-embed-lexical-py-c4dd09e8.md  src-ato-mcp-embed-model-py-27a1df4a.md  src-ato-mcp-formatters-py-04707945.md  src-ato-mcp-indexer-build-py-397c7b5a.md  src-ato-mcp-indexer-chunk-py-7effe4b6.md  src-ato-mcp-indexer-extract-py-3f45c8f5.md  src-ato-mcp-indexer-metadata-py-29ecec0a.md  src-ato-mcp-indexer-pack-py-79343b4b.md  src-ato-mcp-scraper-client-py-e6b56578.md  src-ato-mcp-scraper-pipeline-py-07e0cf8c.md  src-ato-mcp-scraper-reducer-py-107d4415.md  src-ato-mcp-scraper-snapshot-py-8c4b5678.md  src-ato-mcp-scraper-threadpool-py-ccb71fa4.md  src-ato-mcp-server-py-66121545.md  src-ato-mcp-tools-py-70c55fba.md  (+7 more)
.codex/: hooks.json
data/: doc_type_map.yaml  eval_queries.yaml
docs/: main-pc-runbook.md  mcp-improvement-plan.md  overview.html
release_full/: ato.db-shm
scripts/: heading_dedup_report.md  heading_dedup_trial.py  ingest_new_docs.py  maintainer-sync.sh  make-offline-bundle.sh  migrate_chunker_heading_levels.py  migrate_v4_to_v5.py  migrate_v5_dedup_headings.py  publish-release.sh  reconcile_index.py  repack_from_db.py  seed_empty_shells.py  smoke-rust-install.sh
src/: main.rs
systemd/: README.md  ato-mcp-maintainer-daily.service  ato-mcp-maintainer-daily.timer  ato-mcp-maintainer-weekly.service  ato-mcp-maintainer-weekly.timer  ato-mcp-update.service  ato-mcp-update.timer
tests/: conftest.py  ship_test.py  test_chunk.py  test_classifier.py  test_end_to_end.py  test_extract.py  test_human_code.py  test_manifest.py  test_pack.py  test_release.py  test_rules.py  test_store.py  test_tools.py
(+38 files in other folders)
