[package]
name = "ato-mcp"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Standalone MCP server for the Australian Taxation Office legal corpus"

[[bin]]
name = "ato-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
fs2 = "0.4"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.15"
url = "2.5"
zstd = "0.13"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
