[package]
name = "ato-mcp"
version = "0.6.2"
edition = "2021"
license = "MIT"
description = "Standalone MCP server for the Australian Taxation Office legal corpus"

[[bin]]
name = "ato-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
fs2 = "0.4"
ndarray = "0.17"
ort = "2.0.0-rc.12"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
simsimd = "5"
tar = "0.4"
tempfile = "3.15"
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }
url = "2.5"
zstd = "0.13"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
rand = "0.8"
